--- a/OperationTridentBackEnd/OperationTridentBackEnd.csproj
+++ b/OperationTridentBackEnd/OperationTridentBackEnd.csproj
@@ -33,7 +33,6 @@
     <Compile Include="core\Player.cs" />
     <Compile Include="core\ProtocolBase.cs" />
     <Compile Include="core\ProtocolBytes.cs" />
-    <Compile Include="core\ProtocolStr.cs" />
     <Compile Include="core\ServNet.cs" />
     <Compile Include="core\Sys.cs" />
     <Compile Include="Logic\HandleBattleMsg.cs" />
@@ -48,6 +47,7 @@
     <Compile Include="Logic\handlePlayerEvent.cs" />
     <Compile Include="Logic\handlePlayerMsg.cs" />
     <Compile Include="AssemblyInfo.cs" />
+    <Compile Include="Logic\handleBroadCastMsg.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
