--- a/OperationTridentBackEnd/packages.config
+++ b/OperationTridentBackEnd/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="MySql.Data" version="6.10.7" targetFramework="net47" />
+  <package id="NLog" version="4.5.6" targetFramework="net47" />
+  <package id="NLog.Schema" version="4.5.6" targetFramework="net47" />
 </packages>
