--- a/OperationTridentBackEnd/app.config
+++ b/OperationTridentBackEnd/app.config
@@ -1,4 +1,68 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  
+<configSections>
+<section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog"/>
+</configSections>
+<nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
+      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xsi:schemaLocation="http://www.nlog-project.org/schemas/NLog.xsd NLog.xsd"
+      autoReload="true"
+      throwExceptions="false"
+      internalLogLevel="Off" internalLogFile="c:\temp\nlog-internal.log">
+
+  <!-- optional, add some variables
+  https://github.com/nlog/NLog/wiki/Configuration-file#variables
+  -->
+  <variable name="myvar" value="myvalue"/>
+
+  <!--
+  See https://github.com/nlog/nlog/wiki/Configuration-file
+  for information on customizing logging rules and outputs.
+   -->
+  <targets>
+
+    <!--
+    add your targets here
+    See https://github.com/nlog/NLog/wiki/Targets for possible targets.
+    See https://github.com/nlog/NLog/wiki/Layout-Renderers for the possible layout renderers.
+    -->
+    <!--
+            <target name="console" xsi:type="ColoredConsole" layout="${date:format=HH\:mm\:ss}> ${message}"/>
+    <target xsi:type="File" name="info_file" fileName="${basedir}/../../logs/${shortdate}.log"
+            layout="${longdate} ${uppercase:${level}} ${message}" />
+            -->
+    <!--屏幕打印消息-->
+    <target name="console" xsi:type="ColoredConsole" 
+                    layout="${date:format=HH\:mm\:ss}> ${message}"/>
+    
+    <!--VS输出窗口-->
+    <target name="debugger" xsi:type="Debugger"
+                    layout="${date:format=HH\:mm\:ss} | ${level:padding=-5} | ${message}" />
+
+    <!--保存至文件-->
+    <target name="file" xsi:type="File" maxArchiveFiles="30"
+                    fileName="${basedir}/../../logs/${shortdate}.log"
+                    layout="${longdate} | ${level:uppercase=false:padding=-5} | ${message} ${onexception:${exception:format=tostring} ${newline} ${stacktrace} ${newline}" />
+    <!--
+    Write events to a file with the date in the filename.
+    <target xsi:type="File" name="f" fileName="${basedir}/logs/${shortdate}.log"
+            layout="${longdate} ${uppercase:${level}} ${message}" />
+    -->
+  </targets>
+
+  <rules>
+    <!-- add your logging rules here -->
+
+    <!--Debug Setting-->
+    <logger name="*" minlevel="Info" writeTo="console"/>
+    <logger name="*" minlevel="Trace" writeTo="file" />
+    <!--Release Setting-->
+    <!--<logger name="*" minlevel="Info" writeTo="file"/>-->
+    <!--
+    Write all events with minimal level of Debug (So Debug, Info, Warn, Error and Fatal, but not Trace)  to "f"
+    <logger name="*" minlevel="Debug" writeTo="f" />
+    -->
+  </rules>
+</nlog>
+
 </configuration>
