Use app.config to manage database.

--- a/OperationTridentBackEnd/app.config
+++ b/OperationTridentBackEnd/app.config
@@ -64,5 +64,13 @@
     -->
   </rules>
 </nlog>
-
+<appSettings>
+        <add key="Listen_ip" value="0.0.0.0"/>
+        <add key="Listen_port" value="8000"/>
+        <add key="Mysql_database" value="game"/>
+        <add key="Mysql_source" value="127.0.0.1"/>
+        <add key="Mysql_userId" value="root"/>
+        <add key="Mysql_password" value="123456"/>
+        <add key="Mysql_port" value="3306"/>
+</appSettings>
 </configuration>
