Modify app.config, default generate logs in current directory

--- a/OperationTridentBackEnd/app.config
+++ b/OperationTridentBackEnd/app.config
@@ -41,7 +41,7 @@
 
     <!--保存至文件-->
     <target name="file" xsi:type="File" maxArchiveFiles="30"
-                    fileName="${basedir}/../../logs/${shortdate}.log"
+                    fileName="${basedir}/logs/${shortdate}.log"
                     layout="${longdate} | ${level:uppercase=false:padding=-5} | ${message} ${onexception:${exception:format=tostring} ${newline} ${stacktrace} ${newline}" />
     <!--
     Write events to a file with the date in the filename.
