--- a/OperationTridentBackEnd/app.config
+++ b/OperationTridentBackEnd/app.config
@@ -54,10 +54,12 @@
     <!-- add your logging rules here -->
 
     <!--Debug Setting-->
-    <logger name="*" minlevel="Info" writeTo="console"/>
+    <!--
+            <logger name="*" minlevel="Info" writeTo="console"/>
     <logger name="*" minlevel="Trace" writeTo="file" />
+    -->
     <!--Release Setting-->
-    <!--<logger name="*" minlevel="Info" writeTo="file"/>-->
+    <logger name="*" minlevel="Info" writeTo="file"/>
     <!--
     Write all events with minimal level of Debug (So Debug, Info, Warn, Error and Fatal, but not Trace)  to "f"
     <logger name="*" minlevel="Debug" writeTo="f" />
